--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,17 @@
         "jest": true
     },
     "rules": {
+        "no-param-reassign": [
+            "error",
+            {
+                "props": true,
+                "ignorePropertyModificationsFor": [
+                    "state",
+                    "acc",
+                    "accumulator"
+                ]
+            }
+        ],
         "one-var": 0,
         "array-callback-return": 0,
         "consistent-return": 0,
